--- a/practica2/db/practica2.lpc.html
+++ b/practica2/db/practica2.lpc.html
@@ -16,7 +16,103 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >inst</TD>
+<TD >stbin|\bcd_digits:4:digit_0</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >5</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >stbin|\bcd_digits:3:digit_0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >stbin|\bcd_digits:2:digit_0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >stbin|\bcd_digits:1:digit_0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >stbin</TD>
+<TD >19</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >17</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >b2v_instac</TD>
+<TD >35</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >17</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >b2v_inst_practica2|inst</TD>
 <TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,7 +128,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst5</TD>
+<TD >b2v_inst_practica2|inst5</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -48,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2</TD>
+<TD >b2v_inst_practica2|inst2</TD>
 <TD >2</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -64,7 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst3</TD>
+<TD >b2v_inst_practica2|inst3</TD>
 <TD >2</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -80,12 +176,28 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst4</TD>
+<TD >b2v_inst_practica2|inst4</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >b2v_inst_practica2</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >11</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
